Fix blockquote border for dark mode

--- a/components/blog/blog_post.module.scss
+++ b/components/blog/blog_post.module.scss
@@ -95,7 +95,7 @@
 
   blockquote {
     font-style: italic;
-    border-left: 8px var(--dark) solid;
+    border-left: 8px var(--color) solid;
     margin: var(--section-spacing) 0;
     padding: 0.5em 1em;
 
